# librarian

./: .gitignore  README.md  TODO.md  count  key.hk  librarian.cabal  stack.yaml
app/: Main.hs  Make.hs  QR.hs  Ris.hs
bash/: .example.swp  copy  count  example  mkCompletions
bash/ris-files/: 999828609502121.ris  999887795302121.ris  999901542902121.ris  999974575802121.ris
hamlet/: default.hamlet  printable.hamlet
ris-files/: 999512195102121.ris  999849741702121.ris
src/: .Commands.hs.swp  .Options.hs.swp  Cards.hs  Commands.hs  LibraryDB.hs  Options.hs  Parser.hs  QRCodes.hs  QRRepa.hs  Types.hs
src/Exec/: Options.hs
src/Generators/: Cards.hs  QRCodes.hs
src/Internal/: LibInt.hs  Reader.hs  Types.hs
src/Search/: Finders.hs
test/: Carder.hs  Internal.hs  cmd-list
