name:                librarian
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/vmchale/librarian#readme
license:             BSD3
license-file:        LICENSE
author:              Vanessa McHale
maintainer:          tmchale@wisc.edu
copyright:           2016 Vanessa McHale
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     QRCodes
                     , Options
  other-modules:       LibraryDB
                     , Types
  build-depends:       base >= 4.7 && < 5
                     , time
                     , aeson
                     , aeson-pretty
                     , email-validate
                     , lens
                     , bytestring
                     , optparse-applicative
                     , haskell-qrencode
                     , JuicyPixels
                     , vector
                     , cryptonite
                     , jose-jwt
                     , directory
  default-language:    Haskell2010

executable library
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  build-depends:       base
                     , librarian
  default-language:    Haskell2010

executable qrpipe
  hs-source-dirs:      app
  main-is:             QR.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  build-depends:       base
                     , librarian
                     , bytestring
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/vmchale/librarian
