name:                librarian
version:             0.1.0.0
synopsis:            Manage a json record of a home library. 
description:         Please see README.md
homepage:            https://github.com/vmchale/librarian#readme
license:             BSD3
license-file:        LICENSE
author:              Vanessa McHale
maintainer:          tmchale@wisc.edu
copyright:           2016 Vanessa McHale
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     LibraryDB
                     , Exec.Options
                     , Search.Finders
  other-modules:       Internal.Types
                     , Generators.Cards
                     , Internal.LibInt
                     , Internal.Reader
                     , Parser
                     , Generators.QRCodes
  build-depends:       base >= 4.7 && < 5
                     , time
                     , aeson
                     , aeson-pretty
                     , email-validate
                     , lens
                     , bytestring
                     , optparse-applicative < 0.13.0.0
                     , haskell-qrencode
                     , JuicyPixels
                     , vector
                     , cryptonite
                     , jose-jwt
                     , directory
                     , process
                     , shakespeare
                     , blaze-html
                     , MissingH
                     , monadlist
                     , smtp-mail
                     , mime-mail
                     , text
                     , qr-imager
                     , composition
                     , concatenative
  default-language:    Haskell2010

executable library
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  build-depends:       base
                     , librarian
  default-language:    Haskell2010

test-suite test-lib
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  other-modules:       Internal
  main-is:             Carder.hs
  build-depends:       base
                     , librarian
                     , directory
                     , process
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/vmchale/librarian
